Placed footer outside of wrapper in hopes of fixing spacing issues.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -568,7 +568,7 @@ input[value="Search For Books"]:hover, .advanced_search:hover {
 	width: 100%;
 	background-color: #222;
 	color: #fff;
-	margin-top: 0px;
+	margin-top: -95px;
 	padding-top: 30px;
 }
 
